--- a/city.html
+++ b/city.html
@@ -13,7 +13,7 @@
         <img src="img\Ростов.jpg" width="380">
         <img src="img\ростов 2.webp" width="368">
         <p>Ростов-на-Дону – десятый по количеству населения город России и административный центр Южного федерального округа, расположенный на берегу Дона. Живущий в суетном ритме современности, но не растерявший своей самобытности, обладающий буйным южным темпераментом, но по-кавказски гостеприимный Ростов можно назвать одним из самых многоликих областных городов. Пестрая смесь из национальностей, обычаев и традиций, усиленная отдаленностью от центра России, придает этой земле особенный колорит. И нет ничего удивительного в том, что именно Ростов навсегда остается в памяти, у всех, кто хоть раз прошелся по его улицам, потолкался на шумных городских базарах и пообщался с местными жителями.</p>
-        <a href="portfolio.html"><p style="text-align: left;margin-left: 780px;"><input type="button" value="Вернутся назад"></p></a>
+        <a href="portfolio.html"><p style="text-align: left;margin-left: 780px;"><input type="button" value="Вернуться назад"></p></a>
     </center>
 </body>
 </html>
