--- a/education.html
+++ b/education.html
@@ -29,7 +29,7 @@
                 <td bgcolor="#E6E6FA" style="color: #000000;">2025 год, учиться ещё 2 года</td>
             </tr>
         </table>
-        <a href="portfolio.html"><p style="text-align: left;margin-left: 780px;"><input type="button" value="Вернутся назад"></p></a>
+        <a href="portfolio.html"><p style="text-align: left;margin-left: 780px;"><input type="button" value="Вернуться назад"></p></a>
     </center>
 </body>
 </html>
