--- a/hobbies.html
+++ b/hobbies.html
@@ -41,7 +41,7 @@
             </ul>
         </ol>
     </div>
-    <a href="portfolio.html"><p style="text-align: left;margin-left: 780px;"><input type="button" value="Вернутся назад"></p></a>
+    <a href="portfolio.html"><p style="text-align: left;margin-left: 780px;"><input type="button" value="Вернуться назад"></p></a>
     </center>
 </body>
 </html>
