--- a/portfolio.html
+++ b/portfolio.html
@@ -5,10 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Визитка, портфолио</title>
+    <link rel="stylesheet" href="CSS\style.css">
 </head>
 <body style="background-color: #D8BFD8">
     <center>
-        <h1 style="color: black;">Моё портфолио</h1>
+        <h1>Моё портфолио</h1>
         <a href="education.html"><input type="button" value="Моё образование"></a>
         <a href="city.html"><input type="button" value="От куда я родом"></a>
         <a href="hobbies.html"><input type="button" value="Мои увлечения"></a>
