--- a/hobbies.html
+++ b/hobbies.html
@@ -5,34 +5,35 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Мои увлечения</title>
+    <link rel="stylesheet" href="CSS\style.css">
 </head>
 <body style="background-color: #D8BFD8">
     <center>
     <div>
         <h1 style="color: black;">Мои увлечения</h1>
         <ol style="text-align: left;margin-left: 200px; color: #000000;">
-            <li style="font-size: xx-large; color: #A52A2A;"><b><i>Баскетбол</i></b></li>
+            <li id="basketball"><b><i>Баскетбол</i></b></li>
             <ul type="disc" style="font-size: larger;">
                 <li>Завораживает игра</li>
                 <li>Требует упорного труда</li>
                 <li>Увлекательно</li>
                 <img style="text-align: left;;margin-left: 200px;" src="img\леброн.jpg" width="250">
             </ul>
-            <li style="font-size: xx-large; color: #00008B;"><b><i>Волейбол</i></b></li>
+            <li id="volleyball"><b><i>Волейбол</i></b></li>
             <ul type="disc" style="font-size: larger;">
                 <li>Интересно</li>
                 <li>Требует упорного труда</li>
                 <li>Развивает координацию</li>
                 <img style="text-align: left;;margin-left: 200px;" src="img\волейбол.jpg" width="250">
             </ul>
-            <li style="font-size: xx-large; color: #735353;"><b><i>Чтение</i></b></li>
+            <li id="read"><b><i>Чтение</i></b></li>
             <ul type="disc" style="font-size: larger;">
                 <li>Развитие и гибкое мышление</li>
                 <li>Требует достаточно времени</li>
                 <li>Познавательно</li>
                 <img style="text-align: left;;margin-left: 200px;" src="img\чтение.jpg" width="250">
             </ul>
-            <li style="font-size: xx-large; color: #4B0082;"><b><i>Танцы</i></b></li>
+            <li id="dances"><b><i>Танцы</i></b></li>
             <ul type="disc" style="font-size: larger;">
                 <li>Весело</li>
                 <li>Требует упорного труда</li>
