--- a/hobbies.html
+++ b/hobbies.html
@@ -17,28 +17,28 @@
                 <li>Завораживает игра</li>
                 <li>Требует упорного труда</li>
                 <li>Увлекательно</li>
-                <img style="text-align: left;;margin-left: 200px;" src="img\леброн.jpg" width="250">
+                <img id="imggg" src="img\леброн.jpg">
             </ul>
             <li id="volleyball"><b><i>Волейбол</i></b></li>
             <ul type="disc" style="font-size: larger;">
                 <li>Интересно</li>
                 <li>Требует упорного труда</li>
                 <li>Развивает координацию</li>
-                <img style="text-align: left;;margin-left: 200px;" src="img\волейбол.jpg" width="250">
+                <img id="imggg" src="img\волейбол.jpg">
             </ul>
             <li id="read"><b><i>Чтение</i></b></li>
             <ul type="disc" style="font-size: larger;">
                 <li>Развитие и гибкое мышление</li>
                 <li>Требует достаточно времени</li>
                 <li>Познавательно</li>
-                <img style="text-align: left;;margin-left: 200px;" src="img\чтение.jpg" width="250">
+                <img id="imggg" src="img\чтение.jpg">
             </ul>
             <li id="dances"><b><i>Танцы</i></b></li>
             <ul type="disc" style="font-size: larger;">
                 <li>Весело</li>
                 <li>Требует упорного труда</li>
                 <li>Развивает гибкость движений</li>
-                <img style="text-align: left;;margin-left: 200px;" src="img\танцы.jpg" width="250">
+                <img id="imggg" src="img\танцы.jpg">
             </ul>
         </ol>
     </div>
