--- a/city.html
+++ b/city.html
@@ -9,7 +9,7 @@
 </head>
 <body style="background-color: #D8BFD8">
     <center>
-        <h1 style="color: black;">От куда я родом?</h1>
+        <h1 id="myeducity">От куда я родом?</h1>
         <p><b>Я родилась в гододе Ростов-на-Дону</b></p>
         <img src="img\Ростов.jpg" width="380">
         <img src="img\ростов 2.webp" width="368">
