--- a/education.html
+++ b/education.html
@@ -10,7 +10,7 @@
 <body style="background-color: #D8BFD8"> 
     <center>
         <table border="#ff0000" style="border-radius: 3px; border-color: #483D8B;">
-            <h1 style="color: black;">Моё образование</h1>
+            <h1 id="myeducity">Моё образование</h1>
             <tr>
                 <th bgcolor="#FFEFD5" style="color: #000000;">Место обучения</th>
                 <th bgcolor="#FAFAD2" style="color: #000000;">Статус</th>
