--- a/pz2.html
+++ b/pz2.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="CSS\pz2.css">
 </head>
 <body>
+<center>
     <table>
         <caption>Меню ресторана "Ромашка"</caption>
         <tr>
@@ -19,7 +20,7 @@
         <tr>
         <td class="first">Салаты</td>
         <td class="first">Закуски</td>
-        <td class="first">Первыеблюда</td>
+        <td class="first">Первые блюда</td>
         <td class="first">Вторыеблюда</td>
         </tr>
         <tr>
@@ -110,6 +111,7 @@
         <td>Катув шлях в деруне</td>
         <td>"Гамбовцы" дрожжевые с вишней</td>
         </tr>
-        </table>
+    </table>
+</center>
 </body>
 </html>
