--- a/pz3.html
+++ b/pz3.html
@@ -17,6 +17,170 @@
             <li><a>Как добраться</a></li>
         </ul>
     </div>
-
+    <br>
+    <div class="menu2">
+        <ul class="clearfix">
+            <li><a href="#">Главная</a></li>
+            <li><a href="#">Новости</a></li>
+            <li><a href="#">Контакты</a></li>
+            <li><a href="#">О компании</a></li>
+            <li><a href="#">Как добраться</a></li>
+        </ul>
+    </div>
+    <br>
+    <div class="menu3">
+        <ul class="clearfix">
+            <li><a>Главная</a></li>
+            <li><a>Новости</a></li>
+            <li><a>Контакты</a></li>
+            <li><a>О компании</a></li>
+            <li><a>Как добраться</a></li>
+        </ul>
+    </div>
+    <br>
+    <div class="menu4">
+        <ul class="clearfix">
+            <li><a>Главная<img src="img\plane.png" /></a></li>
+            <li><a>Новости<img src="img\plane.png" /></a></li>
+            <li><a>Контакты<img src="img\plane.png" /></a></li>
+            <li><a>О компании<img src="img\plane.png" /></a></li>
+            <li><a>Как добраться<img src="img\plane.png" /></a></li>
+        </ul>
+    </div>
+    <br>
+    <div class="menu5">
+        <a href="#">Главная</a>
+        <a href="#">Новости</a>
+        <a href="#">Контакты</a>
+        <a href="#">О компании</a>
+        <a href="#">Как добраться</a>
+    </div>
+    <br>
+    <div class="menu6">
+        <a href="#">Главная</a>
+        <a href="#">Новости</a>
+        <a href="#">Контакты</a>
+        <a href="#">О компании</a>
+        <a href="#">Как добраться</a>
+    </div>
+    <br>
+    <div class="menu7">
+        <ul>
+            <li>
+                <figure>
+                    <img src="img\tour1.png" width="50" height="50"/>
+                    <figcaption>авиабилеты</figcaption>
+                </figure>
+            </li>
+            <li>
+                <figure>
+                    <img src="img\tour2.png" width="50" height="50"/>
+                    <figcaption>чартеры</figcaption>
+                </figure>
+            </li>
+            <li>
+                <figure>
+                    <img src="img\tour3.png" width="50" height="50"/>
+                    <figcaption>билеты</figcaption>
+                </figure>
+            </li>
+            <li>
+                <figure>
+                    <img src="img\tour4.png" width="50" height="50"/>
+                    <figcaption>гостиницы</figcaption>
+                </figure>
+            </li>
+            <li>
+                <figure>
+                    <img src="img\tour5.png" width="50" height="50"/>
+                    <figcaption>туризм</figcaption>
+                </figure>
+            </li>
+        </ul>
+    </div>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <div class="menu8">
+        <ul>
+            <li><a href="#">Главная</a></li>
+            <li><a href="#">Новости</a></li>
+            <li><a href="#">Контакты</a></li>
+            <li><a href="#">О компании</a></li>
+            <li><a href="#">Как добраться</a></li>
+        </ul>
+    </div>
+    <br>
+    <br>
+    <table>
+        <tbody>
+            <tr class="dats">
+                <td>Пн</td>
+                <td>Вт</td>
+                <td>Ср</td>
+                <td>Чт</td>
+                <td>Пт</td>
+                <td class="weekend">Сб</td>
+                <td class="weekend">Вс</td>
+            </tr>
+            <tr>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td class="weekend">1</td>
+                <td class="weekend">2</td>
+            </tr>
+            <tr>
+                <td>3</td>
+                <td>4</td>
+                <td>5</td>
+                <td>6</td>
+                <td>7</td>
+                <td class="weekend">8</td>
+                <td class="weekend">9</td>
+            </tr>
+            <tr>
+                <td>10</td>
+                <td>11</td>
+                <td>12</td>
+                <td>13</td>
+                <td>14</td>
+                <td class="weekend">15</td>
+                <td class="weekend">16</td>
+            </tr>
+            <tr>
+                <td>17</td>
+                <td>18</td>
+                <td>19</td>
+                <td>20</td>
+                <td>21</td>
+                <td class="weekend">22</td>
+                <td class="weekend">23</td>
+            </tr>
+            <tr>
+                <td>24</td>
+                <td>25</td>
+                <td>26</td>
+                <td>27</td>
+                <td>28</td>
+                <td class="weekend">29</td>
+                <td class="weekend">30</td>
+            </tr>
+            <tr>
+                <td>30</td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+        </tbody>
+    </table>
 </body>
 </html>
