--- a/JS/kt4.html
+++ b/JS/kt4.html
@@ -7,7 +7,7 @@
     <title>KT 4</title>
 </head>
 <body>
-   <script>
+   <!-- <script>
      let x = +prompt('Введите число');
     let y = +prompt('Введите единицу измерения(1-5)');
     switch (y) {
@@ -27,6 +27,31 @@
         alert(x / 100);
         break;
     }
+   </script> -->
+   <!-- <script>
+    let a = +prompt("Введите a");
+    let s = +prompt("Введите n");
+    for (let i = 0; i < 5; i++) {
+    s += (a ** 2 + 3 * i) / (3 + i);
+    }
+    alert(s);
+   </script> -->
+   <!-- <script>
+    // 1 задание
+    let voyage = ["Карелия", "Абхазия"];
+    voyage.unshift("Золотое кольцо", "Волга");
+    voyage.shift();
+    voyage.push("Мексика");
+    console.log(voyage);
+   </script> -->
+   <script>
+    // 2 задание
+    let arr = [1, 2, 3, 4, 5, 6, 7];
+
+    for (let i = 0; i < arr.length; i++) {
+    arr[i] += Math.pow(arr[i], 2);
+    }
+    console.log(arr);
    </script>
 </body>
 </html>
