--- a/JS/kt5.html
+++ b/JS/kt5.html
@@ -7,6 +7,19 @@
     <title>KT 5</title>
 </head>
 <body>
+    <!-- <script>
+        const word = 'cодержание';
+        console.log(word[2]+word[word.length - 3]+word[1]);
+        console.log(word[2]+word[3]+word[4]+word[word.length - 3]);
+        console.log(word[1]+word[2]+word[word.length - 2]+word[word.length - 3]);
+        console.log(word[2]+word[3]+word[0]+word[word.length - 3]+word[word.length - 4]);
+        console.log(word[2]+word[4]+word[1]+word[word.length - 5]+word[word.length - 4]+word[word.length - 3]+word[8]+word[9]);
+    </script> -->
+    <!-- <script>
+        let x = parseFloat(prompt('Введите x: '));
+        console.log()
+        console.log()
+    </script> -->
     <script>
         
     </script>
