--- a/JS/kt5.html
+++ b/JS/kt5.html
@@ -15,13 +15,13 @@
         console.log(word[2]+word[3]+word[0]+word[word.length - 3]+word[word.length - 4]);
         console.log(word[2]+word[4]+word[1]+word[word.length - 5]+word[word.length - 4]+word[word.length - 3]+word[8]+word[9]);
     </script> -->
-    <!-- <script>
-        let x = parseFloat(prompt('Введите x: '));
-        console.log()
-        console.log()
-    </script> -->
     <script>
-        
+        let x = parseFloat(prompt('Введите x: '));
+        console.log(Math.sin(2*x - 5*Math.PI % 6) + 2)
+        console.log()
     </script>
+    <!-- <script>
+        
+    </script> -->
 </body>
 </html>
