--- a/JS/kt5.html
+++ b/JS/kt5.html
@@ -18,10 +18,7 @@
     <script>
         let x = parseFloat(prompt('Введите x: '));
         console.log(Math.sin(2*x - 5*Math.PI % 6) + 2)
-        console.log()
+        console.log(1/Math.tan(x) + Math.tan(x) % Math.sin(3 * x) - 5)
     </script>
-    <!-- <script>
-        
-    </script> -->
 </body>
 </html>
