--- a/JS/kt4.html
+++ b/JS/kt4.html
@@ -28,14 +28,14 @@
         break;
     }
    </script> -->
-   <!-- <script>
+   <script>
     let a = +prompt("Введите a");
     let s = +prompt("Введите n");
     for (let i = 0; i < 5; i++) {
     s += (a ** 2 + 3 * i) / (3 + i);
     }
     alert(s);
-   </script> -->
+   </script>
    <!-- <script>
     // 1 задание
     let voyage = ["Карелия", "Абхазия"];
@@ -44,14 +44,14 @@
     voyage.push("Мексика");
     console.log(voyage);
    </script> -->
-   <script>
+   <!-- <script>
     // 2 задание
     let arr = [1, 2, 3, 4, 5, 6, 7];
 
     for (let i = 0; i < arr.length; i++) {
     arr[i] += Math.pow(arr[i], 2);
     }
-    console.log(arr);
+    console.log(arr); -->
    </script>
 </body>
 </html>
