--- a/JS/kt6zad2.html
+++ b/JS/kt6zad2.html
@@ -37,7 +37,7 @@
 }
 document.write('Максимальный элемент: ' + Max + '<br>Минимальный элемент: ' + Min);
 document.write('<br><br>' + M[0] + '<br>' + M[1] + '<br>' + M[2])
-document.write('<br><br>Индекс максимального элемента [' + Imax);
+document.write('<br><br>Индекс максимального элемента: [' + Indmax[0] + '][' + Indmax[1] + ']<br>Индекс минимального элемента: [' + Indmin[0] + '][' + Indmin[1] + ']');
     </script>
 </body>
 </html>
