--- a/JS/kt6zad2.html
+++ b/JS/kt6zad2.html
@@ -28,7 +28,7 @@
                 }
                 else {
                     if (M[i][j] > Min) {
-                Max = M[i][j];
+                Min = M[i][j];
                 Indmin[0] = i;
                 Indmin[1] = j;
                 }
